fix Windows sample scripts