@@ -29,7 +29,7 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.lang.foreign.SegmentAllocator;
 import opengl.*;
 import static opengl.glut_h.*;
@@ -42,9 +42,9 @@ public class Teapot {
         glClearColor(0f, 0f, 0f, 0f);
         // Setup Lighting
         glShadeModel(GL_SMOOTH());
-        var pos = allocator.allocateArray(C_FLOAT, new float[] {0.0f, 15.0f, -15.0f, 0});
+        var pos = allocator.allocateFrom(C_FLOAT, new float[] {0.0f, 15.0f, -15.0f, 0});
         glLightfv(GL_LIGHT0(), GL_POSITION(), pos);
-        var spec = allocator.allocateArray(C_FLOAT, new float[] {1, 1, 1, 0});
+        var spec = allocator.allocateFrom(C_FLOAT, new float[] {1, 1, 1, 0});
         glLightfv(GL_LIGHT0(), GL_AMBIENT(), spec);
         glLightfv(GL_LIGHT0(), GL_DIFFUSE(), spec);
         glLightfv(GL_LIGHT0(), GL_SPECULAR(), spec);
@@ -71,16 +71,15 @@ public class Teapot {
     }
 
     public static void main(String[] args) {
-        try (var scope = MemorySession.openConfined()) {
-            var allocator = SegmentAllocator.newNativeArena(scope);
-            var argc = allocator.allocate(C_INT, 0);
+        try (var arena = Arena.ofConfined()) {
+            var argc = arena.allocateFrom(C_INT, 0);
             glutInit(argc, argc);
             glutInitDisplayMode(GLUT_DOUBLE() | GLUT_RGB() | GLUT_DEPTH());
             glutInitWindowSize(500, 500);
-            glutCreateWindow(allocator.allocateUtf8String("Hello Panama!"));
-            var teapot = new Teapot(allocator);
-            var displayStub = glutDisplayFunc$callback.allocate(teapot::display, scope);
-            var idleStub = glutIdleFunc$callback.allocate(teapot::onIdle, scope);
+            glutCreateWindow(arena.allocateFrom("Hello Panama!"));
+            var teapot = new Teapot(arena);
+            var displayStub = glutDisplayFunc$callback.allocate(teapot::display, arena);
+            var idleStub = glutIdleFunc$callback.allocate(teapot::onIdle, arena);
             glutDisplayFunc(displayStub);
             glutIdleFunc(idleStub);
             glutMainLoop();
